8305403: Shenandoah evacuation workers may deadlock

Reviewed-by: shade
Backport-of: 793da60ee833d09db0f6f14b50a7cbd7f4549e3b